--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       background-image: url('bgcomque.jpg');
       background-repeat: no-repeat;
       background-position: top;
-      background-size: 1400px 400px;     
+      background-size: cover;     
       background-attachment: scroll;
     }
   </style>
