--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
     <title>Trang thực đơn quán ăn</title>
     <style>
     body {
-      background-image: url('bgcomque.jpg');
-      background-repeat: no-repeat;
-      background-position: top;
-      background-size: 1400px 400px;     
-      background-attachment: scroll;
-    }
-  </style>
+        background-image: url('bgcomque.jpg');
+        background-repeat: no-repeat;
+        background-position: top center;
+        background-attachment: scroll;
+        background-size: 1400px 400px; /* Kích thước cho máy tính */
+        }
+
+    @media (max-width: 768px) 
+        {
+        body{
+        background-size: cover; /* Kích thước cho điện thoại */
+            }
+        }
+    </style>
 </head>
 <body>
     <h1 style="text-align: center;">Cơm quê Dậu Bường</h1>
