--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang thực đơn quán ăn</title>
     <style>
-    body {
+    header {
         background-image: url('bgcomque.jpg');
         background-repeat: no-repeat;
         background-position: top center;
         background-attachment: scroll;
-        background-size: 1400px 400px; /* Kích thước cho máy tính */
+        background-size: cover; /* Kích thước cho máy tính */
         }
 
     @media (max-width: 768px) 
         {
-        body{
+        header{
         background-size: cover; /* Kích thước cho điện thoại */
             }
         }
