--- a/index.html
+++ b/index.html
@@ -4,29 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang thực đơn quán ăn</title>
-    <style>
-  header {
-    background-image: url('bgcomque.jpg');
-    background-repeat: no-repeat;
-    background-position: top center;
-    background-attachment: scroll;
-    background-size: cover; /* Để hình ảnh phủ kín header */
-    min-height: 400px; /* Quan trọng: Đặt chiều cao tối thiểu cho header */
-    /* Hoặc một chiều cao cố định nếu bạn muốn */
-    /* height: 400px; */
-    width: 100%; /* Đảm bảo header chiếm toàn bộ chiều rộng */
-  }
-
-  /* Media query vẫn sẽ hoạt động tốt với background-size: cover; */
-  @media (max-width: 768px) {
-    header {
-      background-size: cover; /* Vẫn cover để responsive */
-      min-height: 200px; /* Có thể giảm chiều cao trên điện thoại */
-    }
-  }
-</style>
 </head>
 <body>
+    <div class="image-banner">
+    <img src="bgcomque.jpg" alt="Banner" />
+  </div>
     <h1 style="text-align: center;">Cơm quê Dậu Bường</h1>
     <br>
     <h3 style="margin-top: 320px;">Thực đơn: 
