--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang thực đơn quán ăn</title>
+    <style>
+  .image-banner img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    display: block;
+  }
+
+  @media (max-width: 768px) {
+    .image-banner img {
+      height: 200px;
+    }
+  }
+</style>
+
 </head>
 <body>
     <div class="image-banner">
