--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   </div>
     <h1 style="text-align: center;">Cơm quê Dậu Bường</h1>
     <br>
-    <h3 style="margin-top: 320px;">Thực đơn: 
-        <br></h3>
+    <br>Thực đơn: 
+        <br></br>
         <br>
             <li>Trứng chiên hành</li><hr width="200" align="left">
             <li>Cơm cháy chảo kho quẹt</li><hr width="200" align="left">
